--- a/src/components/customerPlanOptions/CustomerPlanOptions.module.css
+++ b/src/components/customerPlanOptions/CustomerPlanOptions.module.css
@@ -29,6 +29,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  
   width: 18.75rem;
   height: 31.25rem;
   padding: 0 2.19rem;
@@ -160,8 +161,7 @@
 }
 
 .plan button {
-  position: absolute;
-  bottom: 1.44rem;
+  margin-top: 1.44rem;
 }
 
 @media screen and (max-width: 1024px) {
